--- a/scroll.html
+++ b/scroll.html
@@ -260,10 +260,9 @@
                     benefits, using R</h3>
                 <div class="category-content">
                     <div class="category-map">
-                        <iframe title="The Real Page Turners, Please Stand Up" aria-label="Bar Chart"
-                            id="datawrapper-chart-MLQxw" src="/disability/map_template.html" scrolling="no"
-                            frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="650"
-                            data-external="1">
+                        <iframe title="The Real Page Turners, Please Stand Up" aria-label="Bar Chart" id="disability"
+                            src="disability/map_template.html" scrolling="no" frameborder="0"
+                            style="width: 0; min-width: 100% !important; border: none;" height="650" data-external="1">
                         </iframe>
                     </div>
                     <div class="category-text">
@@ -313,7 +312,7 @@
                 <div class="category-content">
                     <div class="category-map">
                         <iframe title="The Real Page Turners, Please Stand Up" aria-label="Bar Chart"
-                            id="datawrapper-chart-MLQxw" src="/riker's_island_full/nyc.html" scrolling="no"
+                            id="datawrapper-chart-MLQxw" src="riker's_island_full/nyc.html" scrolling="no"
                             frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="650"
                             data-external="1">
                         </iframe>
