--- a/index.html
+++ b/index.html
@@ -242,7 +242,8 @@
     <header>
         <div class="container" style="padding-top: 1rem; padding-bottom: 0.5rem;">
             <h1 class="title">My mapping gallery</h1>
-            <p class="subtitle" style="margin-bottom: 0rem;">Portfolio of maps I've made throughout my career</p>
+            <p class="subtitle" style="margin-bottom: 0rem;">Portfolio of some
+                maps I've made throughout my career</p>
         </div>
         <div class="container" style="padding-top: 0.75rem;">
             <p class="byline">
@@ -259,8 +260,7 @@
                 <h3 class="category-title" style="color: var(--men);">Analyzing which states are waiting on disabality
                     benefits, using R</h3>
                 <div class="category-content">
-                    <div class="category-map">
-                        <iframe title="The Real Page Turners, Please Stand Up" aria-label="Bar Chart" id="disability"
+                    <div class="category-map"><iframe title="" aria-label="Bar Chart" id="disability"
                             src="disability/map_template.html" scrolling="no" frameborder="0"
                             style="width: 0; min-width: 100% !important; border: none;" height="650" data-external="1">
                         </iframe>
